syntax = "proto3";

option csharp_namespace = "Luxelot.Apps.FserveApp.Messages";

message ChangeDirectory
 {
    string directory = 1;
}
