syntax = "proto3";

option csharp_namespace = "Luxelot.Apps.FserveApp.Messages";

message ChunkRequest
{
    string download_ticket = 1;
    uint32 chunk_seq = 2;
}
