syntax = "proto3";

option csharp_namespace = "Luxelot.Apps.FserveApp.Messages";

message ChunkResponse
 {
    string download_ticket = 1;
    uint32 chunk_seq = 2;
    uint32 chunk_size = 3;
    bytes payload = 4;
}